--- a/card.html
+++ b/card.html
@@ -11,3 +11,6 @@
     <!-- Phosphor Icons -->
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
+  <body class="bg-gray-100 flex items-center justify-center h-screen">
+    <div class="bg-white shadow-lg rounded-xl p-6 w-[350px] text-center">
+      <div class="flex justify-center mb-4">
