--- a/card.html
+++ b/card.html
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Depoimento</title>
 
-    <!-- TwindCSS -->
+ 
     <script src="https://cdn.jsdelivr.net/npm/twind@0.16.17/shim.min.js"></script>
 
-    <!-- Phosphor Icons -->
+ 
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
   <body class="bg-gray-100 flex items-center justify-center h-screen">
     <div class="bg-white shadow-lg rounded-xl p-6 w-[350px] text-center">
       <div class="flex justify-center mb-4">
+        <img
+          src="https://via.placeholder.com/80"
+          alt="Foto de Julia Santos"
+          class="rounded-full border-4 border-green-500 w-20 h-20 object-cover"
+        />
+      </div>
