--- a/card.html
+++ b/card.html
@@ -20,3 +20,6 @@
           class="rounded-full border-4 border-green-500 w-20 h-20 object-cover"
         />
       </div>
+      <p class="text-gray-700 italic mb-4">
+        "A plataforma transformou a maneira como nossa equipe colabora. Intuitiva, poderosa e com um suporte incrível. Recomendo fortemente!"
+      </p>
