--- a/card.html
+++ b/card.html
@@ -23,3 +23,9 @@
       <p class="text-gray-700 italic mb-4">
         "A plataforma transformou a maneira como nossa equipe colabora. Intuitiva, poderosa e com um suporte incrível. Recomendo fortemente!"
       </p>
+      <h3 class="font-bold text-lg text-gray-800">Julia Santos</h3>
+      <p class="text-sm text-gray-500 mb-4">Diretora de Produto na InovaTech</p>
+      <div class="flex justify-center space-x-4">
+        <a href="#" class="text-gray-600 hover:text-blue-600 text-xl">
+          <i class="ph ph-linkedin-logo text-2xl"></i>
+        </a>
