--- a/card.html
+++ b/card.html
@@ -29,3 +29,10 @@
         <a href="#" class="text-gray-600 hover:text-blue-600 text-xl">
           <i class="ph ph-linkedin-logo text-2xl"></i>
         </a>
+ <a href="#" class="text-gray-600 hover:text-blue-400 text-xl">
+          <i class="ph ph-twitter-logo text-2xl"></i>
+        </a>
+      </div>
+    </div>
+  </body>
+</html>
