--- a/card.html
+++ b/card.html
@@ -15,7 +15,7 @@
     <div class="bg-white shadow-lg rounded-xl p-6 w-[350px] text-center">
       <div class="flex justify-center mb-4">
         <img
-          src="https://via.placeholder.com/80"
+          src="https://i.pinimg.com/736x/03/1b/68/031b68882265722dede1080a200f015a.jpg"
           alt="Foto de Julia Santos"
           class="rounded-full border-4 border-green-500 w-20 h-20 object-cover"
         />
