--- a/card.html
+++ b/card.html
@@ -6,9 +6,7 @@
     <title>Depoimento</title>
 
  
-    <script src="https://cdn.jsdelivr.net/npm/twind@0.16.17/shim.min.js"></script>
-
- 
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
   <body class="bg-gray-100 flex items-center justify-center h-screen">
@@ -17,7 +15,7 @@
         <img
           src="https://i.pinimg.com/736x/03/1b/68/031b68882265722dede1080a200f015a.jpg"
           alt="Foto de Julia Santos"
-          class="rounded-full border-4 border-green-500 w-20 h-20 object-cover"
+          class="rounded-full border-4 border-green-500 w-28 h-28 object-cover"
         />
       </div>
       <p class="text-gray-700 italic mb-4">
@@ -34,5 +32,43 @@
         </a>
       </div>
     </div>
-  </body>
+<!-- Code injected by live-server -->
+<script>
+	// <![CDATA[  <-- For SVG support
+	if ('WebSocket' in window) {
+		(function () {
+			function refreshCSS() {
+				var sheets = [].slice.call(document.getElementsByTagName("link"));
+				var head = document.getElementsByTagName("head")[0];
+				for (var i = 0; i < sheets.length; ++i) {
+					var elem = sheets[i];
+					var parent = elem.parentElement || head;
+					parent.removeChild(elem);
+					var rel = elem.rel;
+					if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
+						var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
+						elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
+					}
+					parent.appendChild(elem);
+				}
+			}
+			var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
+			var address = protocol + window.location.host + window.location.pathname + '/ws';
+			var socket = new WebSocket(address);
+			socket.onmessage = function (msg) {
+				if (msg.data == 'reload') window.location.reload();
+				else if (msg.data == 'refreshcss') refreshCSS();
+			};
+			if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
+				console.log('Live reload enabled.');
+				sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
+			}
+		})();
+	}
+	else {
+		console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
+	}
+	// ]]>
+</script>
+</body>
 </html>
